[project]
name = "cartpole-swingup"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mjlab>=1.2.0",
]

[build-system]
requires = ["uv_build>=0.8.18,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.14.14",
]

[tool.ruff]
indent-width = 2
src = ["cartpole_swingup"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B"]

[project.entry-points."mjlab.tasks"]
cartpole_swingup = "cartpole_swingup"